gap issue fixed

--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,11 @@
 }
 
 .grid_container {
-  border: 2px solid red;
   flex: 1 1 auto;
   display: grid;
-  row-gap: 18px;
-  column-gap: 5px;
-  grid-template-columns: 17% 60% 23%;
-  grid-template-rows: 13% 13% 54% 20%;
+  gap: 1%;
+  grid-template-columns: 17% 59% 23%;
+  grid-template-rows: 13% 13% 53% 20%;
   grid-template-areas:
     "header header header"
     ". selection-by-cities ."
@@ -27,7 +25,6 @@
 .header {
   background-color: #002d63;
   border-radius: 12px;
-  /* grid-column: 1/4; */
   grid-area: header;
   display: flex;
   justify-content: space-between;
@@ -50,33 +47,28 @@
 .selection_by_cities {
   grid-area: selection-by-cities;
   border-radius: 12px;
-  border: 1px solid green;
 }
 
 .select_zone {
   grid-area: selection-zone;
   background: #e8f5fa;
   border-radius: 12px;
-  border: 1px solid green;
 }
 
 .database {
   grid-area: database;
   background-color: #f3f3f3;
   border-radius: 12px;
-  border: 1px solid green;
 }
 
 .vol_cards {
   grid-area: vl_cards;
   border-radius: 12px;
   background: #f1f1f1;
-  border: 1px solid green;
 }
 
 .total {
   grid-area: total-info-area;
   border-radius: 12px;
   background: #f3f3f3;
-  border: 1px solid green;
 }
